feat: Added rudimentary long call data feat: Transitioned to IEX Cloud for 52 wk high/low data feat: Updated css + github favicon

--- a/public/index.html
+++ b/public/index.html
@@ -25,10 +25,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Options Visualizer</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
-  <body style="background-color: #282c34">
+  <body style="background-color: #61CCF9">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root" style="padding-bottom:60px"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -39,5 +40,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <footer style="position:absolute; left:0; bottom:0; right:0; padding:10px">
+      <a href="https://github.com/Options-Visualizer/Options-Visualizer.github.io" class="fa fa-github" style="font-size:36px"></a>
+    </footer>
   </body>
+
 </html>
