--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <footer style="position:absolute; left:0; bottom:0; right:0; padding:10px">
-      <a href="https://github.com/Options-Visualizer/Options-Visualizer.github.io" class="fa fa-github" style="font-size:36px"></a>
+      <a href="https://github.com/geomaster453.github.io" class="fa fa-github" style="font-size:36px"></a>
     </footer>
   </body>
 
